# OASES

./: .gitignore  CMakeLists.txt  README.md
examples/c-snap/pulse/: pp.par
src/c-snap/: CMakeLists.txt  accrcy.f  acommon.inc  bcommon.inc  blkdat.f  brent.f  charac.f  chkopt.f  common.inc  compute.f  condrc.f  confr.f  confr.orig  consv.f  convrg.f  csnap.c  csnapt.f  czs.f  defsd.f  eigvec.f  etime.f  etime_vms.f  evalcm.f  evalpr.f  file.f  firstp.f  fndvec.f  get_hdr.f  getone.f  init.f  input.f  ipulse.f  isitan.f  isobr.f  isoint.f  join.f  lagcmp.f  lagrange.f  mdiag.f  meshes.f  (+45 more)
src/plot_X11/contour/: CMakeLists.txt
src/plot_X11/mindis/: CMakeLists.txt
src/plot_X11/plot/: CMakeLists.txt
